--- a/docs/ref.bib
+++ b/docs/ref.bib
@@ -65,3 +65,46 @@
 	pages = {35},
 	file = {Giglio and Kelly - Factor Models, Machine Learning, and Asset Pricing.pdf:files/283/Giglio and Kelly - Factor Models, Machine Learning, and Asset Pricing.pdf:application/pdf},
 }
+
+@article{Martin2021,
+doi = {10.21105/joss.03066},
+url = {https://doi.org/10.21105/joss.03066},
+year = {2021},
+publisher = {The Open Journal},
+volume = {6},
+number = {61},
+pages = {3066},
+author = {Robert Andrew Martin},
+title = {PyPortfolioOpt: portfolio optimization in Python},
+journal = {Journal of Open Source Software}
+}
+
+
+@misc{walsh_machine_nodate,
+	title = {A {Machine} {Learning} {Approach} to {Regime} {Modeling}},
+	year = {2021},
+	url = {https://www.twosigma.com/articles/a-machine-learning-approach-to-regime-modeling/},
+	abstract = {The authors take a machine learning approach to market regime modeling, applying a Gaussian Mixture Model to the factors in the Two Sigma Factor Lens.},
+	language = {en-US},
+	urldate = {2022-10-03},
+	journal = {Two Sigma},
+	author = {Walsh, Eliot},
+	file = {Snapshot:/Users/eric/Zotero/storage/GD7KB74C/a-machine-learning-approach-to-regime-modeling.html:text/html},
+}
+
+@software{Benediktsson_ta-lib-python,
+author = {Benediktsson, John},
+title = {{ta-lib-python}}
+}
+
+
+@article{cont_empirical_nodate,
+	title = {Empirical properties of asset returns: stylized facts and statistical issues},
+	year = {2000},
+	abstract = {We present a set of stylized empirical facts emerging from the statistical analysis of price variations in various types of ﬁnancial markets. We ﬁrst discuss some general issues common to all statistical studies of ﬁnancial time series. Various statistical properties of asset returns are then described: distributional properties, tail properties and extreme ﬂuctuations, pathwise regularity, linear and nonlinear dependence of returns in time and across stocks. Our description emphasizes properties common to a wide variety of markets and instruments. We then show how these statistical properties invalidate many of the common statistical approaches used to study ﬁnancial data sets and examine some of the statistical problems encountered in each case.},
+	language = {en},
+	journal = {QUANTITATIVE FINANCE},
+	author = {Cont, Rama},
+	pages = {14},
+	file = {Cont - Empirical properties of asset returns stylized fa.pdf:/Users/eric/Zotero/storage/QJWSQPTY/Cont - Empirical properties of asset returns stylized fa.pdf:application/pdf},
+}
